index and roster done
js not implemented in index yet. roster complete

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				<div class="whoweare-text-container">
 					<div id="whoweare-text">Alpha Kappa Lambda (ΑΚΛ) is an American collegiate social fraternity for men founded at the University of California, Berkeley, in 1914. In response to the suggestion of Benjamin Ide Wheeler, president of the University of California, we organized our house club as a national fraternity.Through Alpha Kappa Lambda, men with different backgrounds but similar ideals unite with a common purpose: to foster excellence in scholarship, leadership, individual growth, and involvement in community service.</div>
 				</div>
-				<div id="roster-button">See Member Roster</div>
+				<a href="roster.html" target="_blank"><div id="roster-button">See Member Roster</div></a>
 				
 			</section>
 			<!-- What We Do #2f3338-->
@@ -81,8 +81,15 @@
 						</div>
 					</div>
 				</div>
+				<img id="fb-img" src="assets/img/facebook.png"/>
+				<img id="twitter-img" src="assets/img/twitter.png"/>
+				<img id="ig-img" src="assets/img/instagram.png"/>
 			</section>
-			<footer>what</footer>
+			<footer>
+				<div class="footer-text">
+					TERMS OF USE - PRIVACY & COOKIES - 2015 ALPHA KAPPA LAMBDA ALL RIGHTS RESERVED
+				</div>
+			</footer>
 		</div>
 	</body>
 </html>
