--- a/roster.html
+++ b/roster.html
@@ -21,11 +21,11 @@
 					<img id="logo" src="assets/img/logo-small.png"/>
 					<nav class="navbar-container">
 						<ul>
-							<li class="navbar-item" id="link">HOME</li>
+							<li class="navbar-item" id="link"><a href="index.html">HOME</a></li>
 							<li class="navbar-item">&#x00B7</li>
 							<li class="navbar-item" id="link">EVENTS</li>
 							<li class="navbar-item">&#x00B7</li>
-							<li class="navbar-item" id="link">MEMBERS</li>
+							<li class="navbar-item" id="link"><a href="roster.html">MEMBERS</a></li>
 							<li class="navbar-item">&#x00B7</li>
 							<li class="navbar-item" id="link">CONTACT US</li>
 						</ul>
