--- a/events.html
+++ b/events.html
@@ -22,7 +22,7 @@
 						<ul>
 							<li class="navbar-item" id="link"><a href="index.html">HOME</a></li>
 							<li class="navbar-item">&#x00B7</li>
-							<li class="navbar-item" id="link">EVENTS</li>
+							<li class="navbar-item" id="link"><a href="index.html">Events</a></li>
 							<li class="navbar-item">&#x00B7</li>
 							<li class="navbar-item" id="link"><a href="roster.html">MEMBERS</a></li>
 							<li class="navbar-item">&#x00B7</li>
