--- a/events.html
+++ b/events.html
@@ -22,7 +22,7 @@
 						<ul>
 							<li class="navbar-item" id="link"><a href="index.html">HOME</a></li>
 							<li class="navbar-item">&#x00B7</li>
-							<li class="navbar-item" id="link"><a href="index.html">Events</a></li>
+							<li class="navbar-item" id="link"><a href="events.html">EVENTS</a></li>
 							<li class="navbar-item">&#x00B7</li>
 							<li class="navbar-item" id="link"><a href="roster.html">MEMBERS</a></li>
 							<li class="navbar-item">&#x00B7</li>
@@ -70,18 +70,18 @@
 						</div>
 						<div class="image-container">
 							<div class="top-layer">
-								<div class="event-name">These Hands Don't Hurt Fundraiser</div>
-								<img id="event1" src="assets/img/philo-event.jpg"/>
+								<div class="event-name">U of A Fraternity Event</div>
+								<img id="event2" src="assets/img/event2.jpg"/>
 							</div>
 							<div class="buffer-layer"></div>
 							<div class="bottom-layer">
 								<div class="overlay-item" id="event-location">
 									<img id="loc-icon" src="assets/img/overlay-location.png"/>
-									<div id="loc-text">Sproul Plaza</div>
+									<div id="loc-text">AKL House</div>
 								</div>
 								<div class="overlay-item" id="event-time">
 									<img id="time-icon" src="assets/img/overlay-time.png"/>
-									<div id="time-text">10am-2pm</div>
+									<div id="time-text">10pm-1am</div>
 								</div>
 								<div class="overlay-item" id="event-description">
 									<img id="info-icon" src="assets/img/overlay-info.png"/>
@@ -97,18 +97,18 @@
 						</div>
 						<div class="image-container">
 							<div class="top-layer">
-								<div class="event-name">These Hands Don't Hurt Fundraiser</div>
-								<img id="event1" src="assets/img/philo-event.jpg"/>
+								<div class="event-name">Senior Sendoff</div>
+								<img id="event3" src="assets/img/event3.jpg"/>
 							</div>
 							<div class="buffer-layer"></div>
 							<div class="bottom-layer">
 								<div class="overlay-item" id="event-location">
 									<img id="loc-icon" src="assets/img/overlay-location.png"/>
-									<div id="loc-text">Sproul Plaza</div>
+									<div id="loc-text">AKL House</div>
 								</div>
 								<div class="overlay-item" id="event-time">
 									<img id="time-icon" src="assets/img/overlay-time.png"/>
-									<div id="time-text">10am-2pm</div>
+									<div id="time-text">7pm-12am</div>
 								</div>
 								<div class="overlay-item" id="event-description">
 									<img id="info-icon" src="assets/img/overlay-info.png"/>
@@ -124,18 +124,18 @@
 						</div>
 						<div class="image-container">
 							<div class="top-layer">
-								<div class="event-name">These Hands Don't Hurt Fundraiser</div>
-								<img id="event1" src="assets/img/philo-event.jpg"/>
+								<div class="event-name">Summer Beach and BBQ</div>
+								<img id="event1" src="assets/img/event4.jpg"/>
 							</div>
 							<div class="buffer-layer"></div>
 							<div class="bottom-layer">
 								<div class="overlay-item" id="event-location">
 									<img id="loc-icon" src="assets/img/overlay-location.png"/>
-									<div id="loc-text">Sproul Plaza</div>
+									<div id="loc-text">Santa Cruz</div>
 								</div>
 								<div class="overlay-item" id="event-time">
 									<img id="time-icon" src="assets/img/overlay-time.png"/>
-									<div id="time-text">10am-2pm</div>
+									<div id="time-text">12pm-8pm</div>
 								</div>
 								<div class="overlay-item" id="event-description">
 									<img id="info-icon" src="assets/img/overlay-info.png"/>
@@ -151,18 +151,18 @@
 						</div>
 						<div class="image-container">
 							<div class="top-layer">
-								<div class="event-name">These Hands Don't Hurt Fundraiser</div>
-								<img id="event1" src="assets/img/philo-event.jpg"/>
+								<div class="event-name">Fourth of July Celebrations</div>
+								<img id="event1" src="assets/img/event5.png"/>
 							</div>
 							<div class="buffer-layer"></div>
 							<div class="bottom-layer">
 								<div class="overlay-item" id="event-location">
 									<img id="loc-icon" src="assets/img/overlay-location.png"/>
-									<div id="loc-text">Sproul Plaza</div>
+									<div id="loc6-text">Memorial Glade</div>
 								</div>
 								<div class="overlay-item" id="event-time">
 									<img id="time-icon" src="assets/img/overlay-time.png"/>
-									<div id="time-text">10am-2pm</div>
+									<div id="time-text">8pm-12am</div>
 								</div>
 								<div class="overlay-item" id="event-description">
 									<img id="info-icon" src="assets/img/overlay-info.png"/>
@@ -178,18 +178,18 @@
 						</div>
 						<div class="image-container">
 							<div class="top-layer">
-								<div class="event-name">These Hands Don't Hurt Fundraiser</div>
-								<img id="event1" src="assets/img/philo-event.jpg"/>
+								<div class="event-name">The Big Game: Cal vs. Stanford</div>
+								<img id="event6" src="assets/img/event6.jpg"/>
 							</div>
 							<div class="buffer-layer"></div>
 							<div class="bottom-layer">
 								<div class="overlay-item" id="event-location">
 									<img id="loc-icon" src="assets/img/overlay-location.png"/>
-									<div id="loc-text">Sproul Plaza</div>
+									<div id="loc6-text">Memorial Stadium</div>
 								</div>
 								<div class="overlay-item" id="event-time">
 									<img id="time-icon" src="assets/img/overlay-time.png"/>
-									<div id="time-text">10am-2pm</div>
+									<div id="time-text">12pm-8pm</div>
 								</div>
 								<div class="overlay-item" id="event-description">
 									<img id="info-icon" src="assets/img/overlay-info.png"/>
