updated roster as of 8/15

--- a/roster.html
+++ b/roster.html
@@ -52,14 +52,14 @@
 			</section>
 			<section class = "section" id = "roster-section">
 				<div class="roster-container">
-					<div class="roster-item xcom fall13">
+					<div class="roster-item fall13">
 						<div class="overlay-descrip">
 							<div class="member-name">
 								Zachary
 							</div>
 							<div class="descrip">
 								Linguist <br/><br/>
-								External Vice President
+								Shanghai-nese
 							</div>
 							<img src="assets/img/zack.jpg" />
 						</div>
@@ -71,7 +71,7 @@
 							</div>
 							<div class="descrip">
 								Lives in the House <br/><br/>
-								Does Mostly Nothing
+								Loves wine
 							</div>
 							<img src="assets/img/pat.jpg"/>
 						</div>
@@ -95,7 +95,7 @@
 							</div>
 							<div class="descrip">
 								Avid Sloth <br/><br/>
-								Never attends meetings
+								Webmaster
 							</div>
 							<img src="assets/img/alan.jpg"/>
 						</div>
@@ -179,7 +179,7 @@
 							</div>
 							<div class="descrip">
 								High WTP <br/><br/>
-								Adventurer
+								The Nighthawk
 							</div>
 							<img src="assets/img/luis.jpg"/>
 						</div>
@@ -242,6 +242,186 @@
 								CP3
 							</div>
 							<img src="assets/img/david.jpg"/>
+						</div>
+					</div>
+					<div class="roster-item xcom sp14">
+						<div class="overlay-descrip">
+							<div class="member-name">
+								Ryan
+							</div>
+							<div class="descrip">
+								Cal Club Volleyball <br/><br/>
+								Recruitment Chair
+							</div>
+							<img src="assets/img/ryankapur.jpg"/>
+						</div>
+					</div>
+					<div class="roster-item xcom sp15">
+						<div class="overlay-descrip">
+							<div class="member-name">
+								Spencer
+							</div>
+							<div class="descrip">
+								Premed <br/><br/>
+								Pledge Master
+							</div>
+							<img src="assets/img/spencer.jpg"/>
+						</div>
+					</div>
+					<div class="roster-item sp15">
+						<div class="overlay-descrip">
+							<div class="member-name">
+								Lance
+							</div>
+							<div class="descrip">
+								Party Go-er <br/><br/>
+								Future Doctor
+							</div>
+							<img src="assets/img/lance.jpg"/>
+						</div>
+					</div>
+					<div class="roster-item sp14">
+						<div class="overlay-descrip">
+							<div class="member-name">
+								Leo
+							</div>
+							<div class="descrip">
+								Narcissistic Introvert <br/><br/>
+								CS Consultant
+							</div>
+							<img src="assets/img/leo.jpg"/>
+						</div>
+					</div>
+					<div class="roster-item sp14">
+						<div class="overlay-descrip">
+							<div class="member-name">
+								Ed
+							</div>
+							<div class="descrip">
+								Que Chevere <br/><br/>
+								Haas Wonder Boy
+							</div>
+							<img src="assets/img/ed.png"/>
+						</div>
+					</div>
+					<div class="roster-item fall13">
+						<div class="overlay-descrip">
+							<div class="member-name">
+								Steven
+							</div>
+							<div class="descrip">
+								Croatian <br/><br/>
+								Hajduk Split's Biggest Fan
+							</div>
+							<img src="assets/img/steven.png"/>
+						</div>
+					</div>
+					<div class="roster-item fall13">
+						<div class="overlay-descrip">
+							<div class="member-name">
+								Eric
+							</div>
+							<div class="descrip">
+								Modern Art Lover <br/><br/>
+								Int'l Development and Feminist Studies
+							</div>
+							<img src="assets/img/ericwilcox.png"/>
+						</div>
+					</div>
+					<div class="roster-item xcom fall13">
+						<div class="overlay-descrip">
+							<div class="member-name">
+								Aaron
+							</div>
+							<div class="descrip">
+								World Traveler <br/><br/>
+								Secretary
+							</div>
+							<img src="assets/img/aaron.png"/>
+						</div>
+					</div>
+					<div class="roster-item fall13">
+						<div class="overlay-descrip">
+							<div class="member-name">
+								Austin
+							</div>
+							<div class="descrip">
+								BP Sharpshooter <br/><br/>
+								Skater
+							</div>
+							<img src="assets/img/austincarango.png"/>
+						</div>
+					</div>
+					<div class="roster-item sp14">
+						<div class="overlay-descrip">
+							<div class="member-name">
+								Neil
+							</div>
+							<div class="descrip">
+								Loves his fam <br/><br/>
+								Yeezus Wannabe
+							</div>
+							<img src="assets/img/neil.png"/>
+						</div>
+					</div>
+					<div class="roster-item fall14">
+						<div class="overlay-descrip">
+							<div class="member-name">
+								Ganesh
+							</div>
+							<div class="descrip">
+								Cal Club Crew <br/><br/>
+								Hawaiian 
+							</div>
+							<img src="assets/img/ganesh.png"/>
+						</div>
+					</div>
+					<div class="roster-item fall14">
+						<div class="overlay-descrip">
+							<div class="member-name">
+								Alex
+							</div>
+							<div class="descrip">
+								Human Rights Activist <br/><br/>
+								Political Science Philosophy 
+							</div>
+							<img src="assets/img/alex.png"/>
+						</div>
+					</div>
+					<div class="roster-item sp15">
+						<div class="overlay-descrip">
+							<div class="member-name">
+								Julian
+							</div>
+							<div class="descrip">
+								Foodie <br/><br/>
+								AFX Dancer
+							</div>
+							<img src="assets/img/julian.png"/>
+						</div>
+					</div>
+					<div class="roster-item sp15">
+						<div class="overlay-descrip">
+							<div class="member-name">
+								Aric
+							</div>
+							<div class="descrip">
+								Future Ambassador <br/><br/>
+								Cal MUN
+							</div>
+							<img src="assets/img/aric.png"/>
+						</div>
+					</div>
+					<div class="roster-item fall13">
+						<div class="overlay-descrip">
+							<div class="member-name">
+								Matt
+							</div>
+							<div class="descrip">
+								 <br/><br/>
+								
+							</div>
+							<img src="assets/img/mattbikoff.png"/>
 						</div>
 					</div>
 				</div>
