will/neil/leo bio change

--- a/roster.html
+++ b/roster.html
@@ -286,7 +286,7 @@
 								Leo
 							</div>
 							<div class="descrip">
-								Narcissistic Introvert <br/><br/>
+								Ball is Life <br/><br/>
 								CS Consultant
 							</div>
 							<img src="assets/img/leo.jpg"/>
@@ -359,7 +359,7 @@
 							</div>
 							<div class="descrip">
 								Loves his fam <br/><br/>
-								Yeezus Wannabe
+								Fresh
 							</div>
 							<img src="assets/img/neil.png"/>
 						</div>
